--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="https://stackoverflow.com/users/1997993/trevor-jex" target="_blank">Stack Overflow</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="resume.pdf" target="_blank">Resume</a>
+            <a class="nav-link" href="https://docs.google.com/document/d/1jpRePU5O0_mVabea1HAyH6IiFgr6pla4kvJYOG08Ufw/export?format=pdf">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="modal" data-target="#contact" href="#" onclick="return false;">Contact</a>
